[package]
name = "solink-tracing-flat-json"
version = "1.0.0"
edition = "2021"
description = "Log flattened JSON in tracing."
license = "MIT"

[dependencies]
chrono = "0.4.38"
serde = "1.0.203"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros"] }
